--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://okaponta.github.io/weeklymetaversweeklymetaversee/
+baseURL: https://okaponta.github.io/weeklymetavers/
 theme: "PaperMod"
 languageCode: ja-jp
 title: Metaverse Weekly
