--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@ theme: "PaperMod"
 languageCode: ja-jp
 title: Metaverse Weekly
 
-  #enableRobotsTXT: true
+enableRobotsTXT: true
   #buildDrafts: false
   #buildFuture: false
   #buildExpired: false
@@ -16,8 +16,8 @@ title: Metaverse Weekly
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  title: Weekly Metaverse
-  description: "個人的にウォッチしているメタバース関連情報のアーカイブです。"
+  title: Metaverse Weekly
+  description: "個人的にウォッチしているメタバース関連情報のメモです。"
   keywords: [Metaverse, メタバース]
   author: Me
     #images: ["<link or path of image for opengraph, twitter-cards>"]
@@ -38,8 +38,8 @@ params:
     #comments: false
     #hidemeta: false
     #hideSummary: false
-    #showtoc: false
-    #tocopen: false
+  showtoc: true
+  tocopen: false
 
     #assets:
     #  # disableHLJS: true # to disable highlight.js
